# Cpp-Pong

./: CMakeLists.txt  readme.md
src/: main.cpp
src/background/: background.cpp  background.h
src/ball/: ball.cpp  ball.h
src/enemy/: enemy.cpp  enemy.h
src/game/: game.cpp  game.h
src/math/: math.cpp  math.h
src/player/: player.cpp  player.h
src/score/: score.cpp  score.h
